--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npx playwright test",
     "test-ui": "npx playwright test --headed",
-    "test-sauce-demo": "npx playwright test --headed tests/sauceDemo.spec.ts"
+    "test-sauce-demo": "npx playwright test --headed tests/sauceDemo.spec.ts",
+    "test-specific": "npx playwright test --headed tests/testDataUsingFixture.spec.ts"
   },
   "keywords": [],
   "author": "",
